--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.34"
   }
